--- a/source/_posts/陪护有感.md
+++ b/source/_posts/陪护有感.md
@@ -4,7 +4,7 @@ date: 2021-11-20 15:17:18
 tags: 生活
 ---
 
-上周五老爸脑梗复发，回老家陪护了一周，深有感触，明白了什么叫病房里见证人心。我过去的时候跟父亲同病房的一共有6个人，之前更多，其中有两个病人给我的印象最深刻，体现了做子女的两个极端。
+上周父亲脑梗复发，回老家陪护了一周，深有感触，明白了什么叫病房里见证人心。我过去的时候跟父亲同病房的一共有6个人，之前更多，其中有两个病人给我的印象最深刻，体现了做子女的两个极端。
 
 <!----more---->
 
