--- a/source/_posts/重建博客遇到的错误记录.md
+++ b/source/_posts/重建博客遇到的错误记录.md
@@ -6,7 +6,7 @@ tags: 技术
 
 上周开始决定重新把之前的博客拾起来。由于长时间没有维护，重新部署过程中遇到了一些问题，简单记录一下。
 
-<!----more---->
+<!--more-->
 
 * 发布到github报错，即`hexo d`命令报错
   * 原因是hexo版本和nodejs版本有个对应关系，匹配不上就会出问题，目前正常工作的版本为：
